# htarjan

./: CMakeLists.txt  README.md
data/: simple0.txt  simple1.txt
script/: compare.sh  makeFullGraph.py  test.sh
src/: hd.cpp  hd.h  main.cpp  naivehd.cpp  naivehd.h  python.cpp  tarjanhd.cpp  tarjanhd.h
